# ZeroG

./: .clineinstructions  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  STS_Rating.txt  bench_search_result.txt  build.ps1  classify_positions.py  convert_epd.py  evaluate_epd.py  extensions_plan.md  generate_book.py  quiet_training_positions.epd  search_tune_pipeline.sh  selfplay.old.sh  selfplay.py  selfplay.sh  spsa.py  spsa_state.json  sts-rating.sh  todo  todo.md  tune.py  tune_pipeline.sh  tune_todo.md
.agents/rules/: info.md
.agents/skills/profile/: SKILL.md
.github/workflows/: ci.yml  release.yml
builds/: fen_test_runner  hello
src/: boards.c  boards.h  fen.c  fen.h  main.c  movegen.h  tune_filter.c  tune_filter.h
src/eval/: eval.c  eval.h  eval_constants.h  eval_mobility.c  eval_mobility.h  king_safety.c  king_safety.h  pawn_eval.c  pawn_eval.h  tune_export.c  tune_export.h
src/hashing/: transposition_table.c  transposition_table.h  zobrist.c  zobrist.h
src/movegen/: movegen.c  movegen.h
src/nn/: nn.c  nn.h
src/nn/trainer/: epd_dedup.c  nn_trainer.c
src/search/: book.c  book.h  move_ordering.c  polyglot_keys.h  pvs.c  search.c  search.h  search_globals.c  search_internal.h  search_utils.c  see.c  see.h  threads.c  threads.h  time_control.c  time_control.h
src/uci/: uci.h  uci_command.c  uci_helpers.c  uci_internal.h  uci_options.c  uci_position.c  uci_runtime.c
test/: eval_test.c  fen_test.c  movegen_tests.c  nn_bench.c  nn_test.c  perft_bench.c  search_bench.c  search_test.c  test_boards.c  tuning_test.c  uci_test.c
test/movegen_tests/: attack_tests.c  king_safety_tests.c  main.c  perft_tests.c  pseudo_legal_tests.c  roundtrip_tests.c  test_helpers.c  test_helpers.h  tests.h  zobrist_tests.c
win_compat/: msvc_compat.h  pthread.h
win_compat/sys/: time.h
